--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 За время работы на ARTBYTE.AGENCY я выполнил более 100 проектов и задач различного типа и разной сложности.<br><br>
                 В настощее время я работаю более чем с 10 порталами для различных клиентов. В течении рабочего дня ,при необходимости, могу переключаться<br>
                 на работу с разными задачами для разных порталов.<br><br>
-                Имею опыт работы с чужим кодом. На некоторых порталах я работаю с кодом двух программистов работавших до меня при отсутствии документации.
+                Имею опыт работы с чужим кодом. На некоторых порталах я работаю с кодом двух программистов работавших до меня при отсутствии <br>документации.
             </p>
             <p><u>с 2018 по 2022 - STiM (Беларусь, Брест)</u></p>
             <p>Я работал бизнес-аналитиком и программистом <b>PHP</b> в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение <br>
@@ -60,15 +60,13 @@
                 и бизнес-аналитиком в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
             </p>
             <h4>из последних моих проектов:</h4>
-            <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на <br>смарт-процессах,
-               задачах, списках. В списках трехуровневая иерархия обращений, sla, юзеры техподдержки, <br>разбитые на линии
-               поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в
-               зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на
-               текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой
-               обращений реализовано 5 кастомных отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. 
-               При наступлении определенных событий ZABIX создается автоматические обращения при помощи кастомного веб-хука.
-               На сегодняшний день имею предложение от сторонней организации о реализации сервис-деска для них.
-            </p>    
+            <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на <br>смарт-процессах,задачах, списках. В списках<br>
+               трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии поддержки. Первая версия формы обращений выполнена мной на Vue.js.<br> 
+               Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5)<br>
+               на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой обращений реализовано 5 кастомных<br>
+               отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. При наступлении определенных событий ZABIX создается автоматические<br>
+               обращения при помощи кастомного веб-хука. Я написал уже 3 кастомных сервис-деска различной степени сложности.<br>
+            </p>
         </article>
 
         <h4>мои компетенции:  CMS <b>Bitrix24</b>, <b>PHP</b>, <b>SQL</b>, <b>JS</b></h4>
