--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 и бизнес-аналитиком в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
             </p>
             <h4>из последних моих проектов:</h4>
-            <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на <br>смарт-процессах,задачах, списках. В списках<br>
+            <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на смарт-процессах,задачах, списках. В списках<br>
                трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии поддержки. Первая версия формы обращений выполнена мной на Vue.js.<br> 
                Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5)<br>
                на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой обращений реализовано 5 кастомных<br>
