--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. При наступлении определенных событий ZABIX создается автоматические<br>
                обращения при помощи кастомного веб-хука. Я написал уже 3 кастомных сервис-деска различной степени сложности.<br>
             </p>
+            <p>Реализация сервиса доставки еды на 'облаке'. Реализован прототип. Использованы приложение и кастомные роботы.<br> </p>    
         </article>
 
         <h4>мои компетенции:  CMS <b>Bitrix24</b>, <b>PHP</b>, <b>SQL</b>, <b>JS</b></h4>
