--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td>linkedin: </td>
-                    <td><a hreh='www.linkedin.com/in/олег-анищенко-aa26977a' target='_blank'>Олег Анищенко</td>
+                    <td><a hreh='www.linkedin.com/in/олег-анищенко-aa26977a' target='_blank'>Олег Анищенко</a>
                 </tr>
             </table>
         </section>
@@ -61,11 +61,11 @@
             </p>
             <h4>из последних моих проектов:</h4>
             <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на смарт-процессах,задачах, списках. В списках<br>
-               трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии поддержки. Первая версия формы обращений выполнена мной на Vue.js.<br> 
-               Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5)<br>
-               на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой обращений реализовано 5 кастомных<br>
-               отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. При наступлении определенных событий ZABIX создается автоматические<br>
-               обращения при помощи кастомного веб-хука. Я написал уже 3 кастомных сервис-деска различной степени сложности.<br>
+               трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии поддержки. Первая версия формы обращений выполнена мной <br>
+               на Vue.js. Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП <br>
+               (всего их 5) на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой обращений реализовано<br>
+               5 кастомных отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. При наступлении определенных событий ZABIX создается<br>
+               автоматические обращения при помощи кастомного веб-хука. Я написал уже 3 кастомных сервис-деска различной степени сложности.<br>
             </p>
             <p>Реализация сервиса доставки еды на 'облаке'. Реализован прототип. Использованы приложение и кастомные роботы.<br> </p>    
         </article>
