--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
             <h4>из последних моих проектов:</h4>
             <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на смарт-процессах,задачах, списках. В списках<br>
                трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии поддержки. Первая версия формы обращений выполнена мной <br>
-               на Vue.js. Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП <br>
-               (всего их 5) на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой обращений реализовано<br>
-               5 кастомных отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. При наступлении определенных событий ZABIX создается<br>
-               автоматические обращения при помощи кастомного веб-хука. Я написал уже 3 кастомных сервис-деска различной степени сложности.<br>
+               на Vue.js. Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей<br>
+               линии ТП (всего их 5) на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
+               обращений реализовано 5 кастомных отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. При наступлении определенных<br>
+                событий ZABIX создается автоматические обращения при помощи кастомного веб-хука. Я написал уже 3 кастомных сервис-деска различной<br>
+                степени сложности.
             </p>
-            <p>Реализация сервиса доставки еды на 'облаке'. Реализован прототип. Использованы приложение и кастомные роботы.<br> </p>    
+            <p>Реализация сервиса доставки еды на 'облаке'. Реализован прототип. Использованы приложение и кастомные роботы.<br>
+            </p>    
         </article>
 
         <h4>мои компетенции:  CMS <b>Bitrix24</b>, <b>PHP</b>, <b>SQL</b>, <b>JS</b></h4>
