--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 портала <b>Bitrix24</b> и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом <b>Bitrix24</b>, администратором <br>
                 и бизнес-аналитиком в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
             </p>
-            <h4>из последних моих проектов:</h4>
+            <h4>некоторые моих проектов:</h4>
             <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на смарт-процессах,задачах, списках. В списках<br>
                трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии поддержки. Первая версия формы обращений выполнена мной <br>
                на Vue.js. Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей<br>
@@ -69,6 +69,8 @@
                 степени сложности.
             </p>
             <p>Реализация сервиса доставки еды на 'облаке'. Реализован прототип. Использованы приложение и кастомные роботы.<br>
+            </p>
+            <p>Интеграции различных коробочных <b>Bitrix24</b> с сайтами, с 1С (в паре с разработчиком 1С), с hh.ru, с кастомным ретейлерским сервисом.<br>
             </p>    
         </article>
 
