--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 событий ZABIX создается автоматические обращения при помощи кастомного веб-хука. Я написал уже 3 кастомных сервис-деска различной<br>
                 степени сложности.
             </p>
-            <p>Реализация сервиса доставки еды на 'облаке'. Реализован прототип. Использованы приложение и кастомные роботы.<br>
+            <p>Реализация сервиса доставки еды на 'облаке'. Реализован прототип. Использованы приложение и кастомные роботы CRM.<br>
             </p>
             <p>Интеграции различных коробочных <b>Bitrix24</b> с сайтами, с 1С (в паре с разработчиком 1С), с hh.ru, с кастомным ретейлерским сервисом.<br>
             </p>    
