--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td>linkedin: </td>
-                    <td><a hreh='www.linkedin.com/in/олег-анищенко-aa26977a' target='_blank'>Олег Анищенко</a>
+                    <td><a hreh="linkedin.com/in/олег-анищенко-aa26977a" target="_blank">Олег Анищенко</a>
                 </tr>
             </table>
         </section>
