--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td>linkedin: </td>
-                    <td><a hreh="linkedin.com/in/олег-анищенко-aa26977a" target="_blank">Олег Анищенко</a>
+                    <td><a hreh="https://www.linkedin.com/in/%D0%BE%D0%BB%D0%B5%D0%B3-%D0%B0%D0%BD%D0%B8%D1%89%D0%B5%D0%BD%D0%BA%D0%BE-aa26977a/" target="_blank">Олег Анищенко</a>
                 </tr>
             </table>
         </section>
