--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                линии ТП (всего их 5) на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
                обращений реализовано 5 кастомных отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. При наступлении определенных<br>
                 событий ZABIX создается автоматические обращения при помощи кастомного веб-хука. Я написал уже 3 кастомных сервис-деска различной<br>
-                степени сложности.
+                степени сложности для разных клиентов.
             </p>
             <p>Реализация сервиса доставки еды на 'облаке'. Реализован прототип. Использованы приложение и кастомные роботы CRM.<br>
             </p>
