--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </article>
 
         <h4>мои компетенции:  CMS <b>Bitrix24</b>, <b>PHP</b>, <b>SQL</b>, <b>JS</b></h4>
-        <h4>также я использую в моей работе: <b>HTML</b>, <b>CSS</b>, <b>bootstrap</b>,<b>Vue.js</b></h4>
+        <h4>также я использую в моей работе: <b>HTML</b>, <b>CSS</b>,<b>Vue.js</b></h4>
         
         <article>
             <h4>образование:</h4>
